@@ -2,12 +2,12 @@
  * @CloudFunc - обьект содержащий общий функционал
  *  клиентский и серверный
  */
-var Util, DOM, CloudFunc, KeyBinding, CloudCmd;
+var Util, DOM, CloudFunc, CloudCmd;
 
 (function(Util, DOM){
     'use strict';
     
-    var Config, Modules, FileTemplate, PathTemplate, Events = DOM.Events;
+    var Key, Config, Modules, FileTemplate, PathTemplate, Events = DOM.Events;
     
     /* Клиентский обьект, содержащий функциональную часть*/
     CloudCmd = {
@@ -159,10 +159,10 @@ var Util, DOM, CloudFunc, KeyBinding, CloudCmd;
     function initModules(pCallBack){
         loadModule({
             /* привязываем клавиши к функциям */
-            path  : 'keyBinding.js',
+            path  : 'key.js',
             func : function(){
-                KeyBinding  = CloudCmd.KeyBinding;
-                KeyBinding.init();
+                Key  = CloudCmd.Key;
+                Key.init();
             }
          });
         
@@ -311,7 +311,7 @@ var Util, DOM, CloudFunc, KeyBinding, CloudCmd;
         });
         
         Util.exec(pCallBack);
-        CloudCmd.KeyBinding();
+        CloudCmd.Key();
     }
     
     
@@ -368,7 +368,7 @@ var Util, DOM, CloudFunc, KeyBinding, CloudCmd;
             lOnContextMenu_f = function(pEvent){
                 var lReturn_b = true;
                 
-                KeyBinding && KeyBinding.unSet();
+                Key && Key.unSet();
                 
                 /* getting html element
                  * currentTarget - DOM event
