@@ -3,7 +3,7 @@ var CloudCmd, Util, DOM, CodeMirror;
 (function(CloudCmd, Util, DOM){
     'use strict';
     
-    var KeyBinding                  = CloudCmd.KeyBinding,
+    var Key                         = CloudCmd.Key,
         CodeMirrorEditor            = {},
         FM,
         CodeMirrorElement,
@@ -139,7 +139,7 @@ var CloudCmd, Util, DOM, CodeMirror;
                 success    : function(data){
                     if( DOM.hidePanel() ){
                         Util.exec(pCallBack, data);
-                        KeyBinding.unSet();
+                        Key.unSet();
                     }
                     
                     DOM.Images.hideLoad();
@@ -155,7 +155,7 @@ var CloudCmd, Util, DOM, CodeMirror;
      * function hides CodeMirror editor
      */
     function hide() {
-        KeyBinding.set();
+        Key.set();
         
         if(CodeMirrorElement && FM)
             FM.removeChild(CodeMirrorElement);
@@ -184,12 +184,12 @@ var CloudCmd, Util, DOM, CodeMirror;
         CallBacks.pop();
         
         /* добавляем обработчик клавишь */
-        DOM.Events.addKey( lKeyListener );
+        DOM.Events.addKey( lListener );
         DOM.setButtonKey('f4', CodeMirrorEditor.show);
         
-        function lKeyListener(pEvent){
+        function lListener(pEvent){
             /* если клавиши можно обрабатывать */
-            if( KeyBinding.get() ){
+            if( Key.get() ){
                 var lF4     = CloudCmd.KEY.F4,
                     lKey    = pEvent.keyCode;
                                 
