@@ -5,7 +5,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
 (function(CloudCmd, Util, DOM, CloudFunc){
     'use strict';
     
-    var KeyBinding                  = CloudCmd.KeyBinding,
+    var Key                         = CloudCmd.Key,
         MenuSeted                   = false,
         Menu                        = {},
         Position,
@@ -186,7 +186,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
                 var m = "clicked: " + key;
                 Util.log(m, options);
                 
-                KeyBinding.set();
+                Key.set();
             },
             
             // define the elements of the menu
@@ -248,7 +248,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
                     DOM.setCurrentFile(lElement);
             }
             
-            KeyBinding.set();
+            Key.set();
         }
     }
     
@@ -291,23 +291,24 @@ var CloudCmd, Util, DOM, CloudFunc, $;
             DOM.jqueryLoad
         ]);
         
-        var lKeyListener = function(pEvent){
+        DOM.Events.addKey( lListener );
+                
+        function lListener(pEvent){
             var lKEY        = CloudCmd.KEY,
-                lKeyCode    = pEvent.keyCode;
+                lF10        = lKEY.F10,
+                lESC        = lKEY.ESC,
+                lKey        = pEvent.keyCode,
+                lShift      = pEvent.shiftKey;
             /* если клавиши можно обрабатывать */
-            if( KeyBinding.get() ){
-                /* if shift + F10 pressed */
-                if(lKeyCode === lKEY.F10 && pEvent.shiftKey){
+            if( Key.get() ){
+                if(lKey === lF10 && lShift){
                     $( DOM.getCurrentFile() ).contextMenu();
                     DOM.preventDefault(pEvent);
                 }
             }
-            else if (lKeyCode === lKEY.ESC)
-                KeyBinding.set();
-        };
-           
-        /* добавляем обработчик клавишь */
-        DOM.Events.addKey( lKeyListener );
+            else if (lKey === lESC)
+                Key.set();
+        }
     };
     
     CloudCmd.Menu                   = Menu;
